--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matxix:
         - sudo: required
           group: edge
           virt: lxd
-          dist: bionic
+          dist: focal
           arch: arm64-graviton2
           rvm: 2.5.8
           env:
@@ -32,7 +32,7 @@ matxix:
         - sudo: required
           group: edge
           virt: lxd
-          dist: bionic
+          dist: focal
           arch: arm64-graviton2
           rvm: 2.5.8
           env:
@@ -44,7 +44,7 @@ matxix:
         - sudo: required
           group: edge
           virt: lxd
-          dist: bionic
+          dist: focal
           arch: arm64-graviton2
           rvm: 2.6.6
           env:
@@ -56,7 +56,7 @@ matxix:
         - sudo: required
           group: edge
           virt: lxd
-          dist: bionic
+          dist: focal
           arch: arm64-graviton2
           rvm: 2.6.6
           env:
